# airline-ticket-system

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airline/: __init__.py  agent_util.py  airline.py  auth.py  blog.py  db.py  error_checking.py  schema.sql  search_util.py  staff_util.py  util.py
airline/init_db/: init_db.sql
airline/sql/: inserts.sql  schema.sql  test_queries.sql  triggers.sql
airline/templates/: base.html  old_base.html
airline/templates/airline/: add_airplane.html  add_booking_agent.html  add_flight.html  add_new_airport.html  change_status.html  create.html  grant_new_permission.html  index.html  post.html  purchase_ticket.html  results.html  update.html
airline/templates/auth/: airline_staff.html  booking_agent.html  customer.html  login.html  register.html
airline/templates/blog/: create.html  index.html  update.html
init/: db.sql
tests/: conftest.py  test_factory.py
