[project]
name = "qilin-airline"
version = "0.1.0"
dependencies = [
  "flask",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.djlint]
indent = 2
preserve_blank_lines=true

[tool.pyright]
reportMissingImports = true
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]
